# chat-langchain

./: .env.gcp.yaml.example  DEPLOYMENT.md  MODIFY.md  Makefile  README.md  env.example  ingested_docs.txt  pyproject.toml  test_rtd.py  threads.json
backend/: configuration.py  constants.py  embeddings.py  ingest.py  main.py  retrieval.py
backend/retrieval_graph/: configuration.py  graph.py  prompts.py
backend/retrieval_graph/researcher_graph/: graph.py
chroma_db/: chroma.sqlite3
frontend/app/: types.ts
frontend/app/components/: SelectModel.tsx
frontend/app/contexts/: GraphContext.tsx  utils.ts
rtdocs/docs.godotengine.org/en/3.6/about/: list_of_features.html
rtdocs/docs.godotengine.org/en/latest/: genindex.html  index.html  search.html
rtdocs/docs.godotengine.org/en/latest/about/: complying_with_licenses.html  docs_changelog.html  faq.html  introduction.html  list_of_features.html  release_policy.html  system_requirements.html
rtdocs/docs.godotengine.org/en/latest/classes/: class_editorexportplugin.html  class_editorsettings.html
rtdocs/docs.godotengine.org/en/latest/tutorials/: troubleshooting.html
rtdocs/docs.godotengine.org/en/stable/: genindex.html  index.html  search.html
rtdocs/docs.godotengine.org/en/stable/about/: complying_with_licenses.html  docs_changelog.html  faq.html  introduction.html  list_of_features.html  release_policy.html  system_requirements.html
rtdocs/docs.godotengine.org/en/stable/classes/: class_@gdscript.html  class_@globalscope.html  class_aabb.html  class_acceptdialog.html  class_aescontext.html  class_animation.html  (+989 more)
(+814 files in other folders)
